--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+#phaser-container {
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    }
