--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,18 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  max-width: none;
+  text-align: left;
+  overflow: hidden;
+}
+
+#phaser-container {
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    display: flex;
 }
 
 .logo {
