--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,17 @@
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   max-width: none;
   text-align: left;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
 }
 
 #phaser-container {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     overflow: hidden;
     display: flex;
 }
